--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 # Database - Matches your docker-compose.yml PostgreSQL configuration
-DATABASE_URL="postgresql://quicket:Password@localhost:5432/quicket?schema=public"
+DATABASE_URL="postgresql://informejo:Password@localhost:5432/informejo?schema=public"
 
 # NextAuth - Generate a secure secret for production!
 NEXTAUTH_URL="http://localhost:3000"
