--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
@@ -19,6 +20,7 @@
     "next": "16.0.8",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.11",
+    "pg": "^8.16.3",
     "radix-ui": "^1.4.3",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
@@ -37,6 +39,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24",
     "@types/nodemailer": "^7.0.4",
+    "@types/pg": "^8.15.6",
     "@types/react": "19.2.7",
     "@types/react-dom": "^19.2.3",
     "beasties": "0.3.5",
@@ -45,6 +48,7 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "openapi-typescript-codegen": "^0.29.0",
+    "prisma": "^7.1.0",
     "typescript": "^5"
   },
   "engines": {
